# MicroGPT

./: .gitignore  CMakeLists.txt  Readme.md  gptquestion.md  gptquestion.txt
include/: tokenizer.hpp
src/: main.cpp  tokenizer.cpp
